Auto refresh home page, minor email fixes

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "mysql"             : "x",
         "domino-nsf"        : "^0.0.3",
         "express"           : "x",
+        "express-session"   : "x",
         "path"              : "x",
         "static-favicon"    : "1.0.2",
         "body-parser"       : "x",
