--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "path"              : "x",
         "static-favicon"    : "1.0.2",
         "body-parser"       : "x",
-        "cookie-parser"     : "^1.4.3",
+        "js-cookie"         : "^2.1.3",
         "nodemailer" 		: "^2.6.x",
         "md5"               : "^2.2.1",
         "nodemailer-smtp-transport" : "x"
