--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "author"        : "Mike Guzior",
     
     "dependencies": {
-        "mysql"             : "x",
-        "domino-nsf"        : "^0.0.3",
-        "express"           : "x",
-        "express-session"   : "x",
-        "path"              : "x",
-        "static-favicon"    : "1.0.2",
-        "body-parser"       : "x",
-        "js-cookie"         : "^2.1.3",
-        "nodemailer" 		: "^2.6.x",
-        "md5"               : "^2.2.1",
+        "mysql"            : "x",
+        "domino-nsf"       : "^0.0.3",
+        "express"          : "x",
+        "express-session"  : "x",
+        "path"             : "x",
+        "static-favicon"   : "1.0.2",
+        "body-parser"      : "x",
+        "js-cookie"        : "^2.1.3",
+        "nodemailer"       : "^2.6.x",
+        "md5"              : "^2.2.1",
+        "ejs"              :"1.0.0",
         "nodemailer-smtp-transport" : "x"
     }
 }
