--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-    "version"       : "1.1.0",
-    "main"          : "main.js",
-    "description"   : "iQRQC Notification System",
-    "author"        : "Mike Guzior",
-    
+    "version": "1.1.0",
+    "main": "main.js",
+    "description": "iQRQC Notification System",
+    "author": "Mike Guzior",
     "dependencies": {
-        "body-parser"       : "x",
-        "express"           : "x",
-        "express-session"   : "x",
-        "js-cookie"         : "^2.1.3",
-        "md5"               : "^2.2.1",
-        "mysql"             : "x",
-        "nodemailer" 		: "^2.6.x",
-        "nodemailer-smtp-transport" : "x",
-        "path"              : "x",
-        "static-favicon"    : "1.0.2",
-    }
+        "body-parser": "^1.17.2",
+        "ejs": "^2.5.7",
+        "express": "^4.15.4",
+        "express-session": "^1.15.5",
+        "js-cookie": "^2.1.4",
+        "md5": "^2.2.1",
+        "mysql": "^2.14.1",
+        "nodemailer": "^2.7.2",
+        "nodemailer-smtp-transport": "^2.7.4",
+        "path": "x",
+        "static-favicon": "1.0.2"
+    },
+    "false": {}
 }
