--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "js-cookie": "^2.1.4",
         "md5": "^2.2.1",
         "mysql": "^2.14.1",
-        "nodemailer": "^2.7.2",
+        "nodemailer": "x",
         "nodemailer-smtp-transport": "^2.7.4",
         "path": "x",
         "static-favicon": "1.0.2"
