--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "description": "iQRQC Notification System",
     "author": "Mike Guzior",
     "dependencies": {
-        "body-parser": "^1.17.2",
+        "body-parser": "^1.18.2",
         "ejs": "^2.5.7",
-        "express": "^4.15.4",
-        "express-session": "^1.15.5",
+        "express": "^4.16.2",
+        "express-session": "^1.15.6",
         "js-cookie": "^2.1.4",
         "md5": "^2.2.1",
-        "mysql": "^2.14.1",
-        "nodemailer": "x",
+        "mysql": "^2.15.0",
+        "nodemailer": "^4.2.0",
         "nodemailer-smtp-transport": "^2.7.4",
         "path": "x",
         "static-favicon": "1.0.2"
