--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "iQRQC Notification System",
     "author": "Mike Guzior",
     "dependencies": {
+        "async": "2.6.0",
         "body-parser": "^1.18.2",
         "ejs": "^2.5.7",
         "express": "^4.16.2",
